# convergence

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cmake/Modules/: FindGLFW.cmake
emscripten/: Makefile  index.html  main.cpp  webrtc.js  websocket.js
emscripten/js/: http.js  webrtc.js  websocket.js
emscripten/net/: channel.cpp  channel.hpp  http.cpp  http.hpp  webrtc.cpp  webrtc.hpp  websocket.cpp  websocket.hpp
emscripten/pla/: dummy.cpp
html/: index.html
native/: Makefile  main.cpp  server.cpp  server.hpp
native/net/: channel.hpp  webrtc.cpp  webrtc.hpp  websocket.cpp  websocket.hpp
native/pla/: address.cpp  address.hpp  alarm.cpp  alarm.hpp  crypto.cpp  crypto.hpp  datagramsocket.cpp  datagramsocket.hpp  random.cpp  random.hpp  scheduler.hpp  securetransport.cpp  securetransport.hpp  serversocket.cpp  serversocket.hpp  socket.cpp  socket.hpp  stream.cpp  stream.hpp  threadpool.hpp  websocket.cpp  websocket.hpp
p3d/: buffer.hpp  bufferobject.cpp  bufferobject.hpp  collidable.cpp  collidable.hpp  context.cpp  context.hpp  engine.cpp  engine.hpp  frustum.cpp  frustum.hpp  include.cpp  include.hpp  intersection.cpp  intersection.hpp  loader.hpp  mediamanager.cpp  mediamanager.hpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  perlinnoise.cpp  perlinnoise.hpp  program.cpp  program.hpp  resource.cpp  resource.hpp  resourcemanager.cpp  resourcemanager.hpp  shader.cpp  shader.hpp
pla/: binary.cpp  binary.hpp  binaryformatter.cpp  binaryformatter.hpp  buffer.hpp  bufferobject.cpp  bufferobject.hpp  collidable.cpp  collidable.hpp  context.cpp  context.hpp  cubemap.cpp  cubemap.hpp  engine.cpp  engine.hpp  font.cpp  font.hpp  frustum.cpp  frustum.hpp  image.cpp  image.hpp  include.cpp  include.hpp  intersection.cpp  intersection.hpp  linalg.cpp  linalg.hpp  loader.hpp  mediamanager.cpp  mediamanager.hpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  opengl.hpp  perlinnoise.cpp  perlinnoise.hpp  program.cpp  program.hpp  resource.cpp  (+10 more)
server/: server.py
shader/: color.frag  color.vect  color.vert  depth.frag  depth.vect  font.frag  font.vect  ground.frag  ground.vect  ground.vert  ink.frag  ink.vect
src/: entity.cpp  entity.hpp  factory.cpp  factory.hpp  firefly.cpp  firefly.hpp  game.cpp  game.hpp  identifier.hpp  include.hpp  island.cpp  island.hpp  ledger.cpp  ledger.hpp  light.cpp  light.hpp  localplayer.cpp  localplayer.hpp  main.cpp  merkle.cpp  merkle.hpp  message.cpp  message.hpp  messagebus.cpp  messagebus.hpp  networking.cpp  networking.hpp  peer.cpp  peer.hpp  peering.cpp  peering.hpp  player.cpp  player.hpp  sha3.cpp  sha3.hpp  store.cpp  store.hpp  surface.cpp  surface.hpp  terrain.cpp  (+7 more)
